--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -1,199 +1,206 @@
-<div>
-  <div class="d-flex justify-content-center">
-    <div class="col-md-8">
-      <h2 jhiTranslate="settings.title" [translateValues]="{ username: settingsForm.value.login }" *ngIf="settingsForm.value.login">
-        User settings for [<strong>{{ settingsForm.value.login }}</strong
-        >]
-      </h2>
+<body>
+  <div>
+    <div class="d-flex justify-content-center">
+      <div class="col-md-8">
+        <h2 jhiTranslate="settings.title" [translateValues]="{ username: settingsForm.value.login }" *ngIf="settingsForm.value.login">
+          User settings for [<strong>{{ settingsForm.value.login }}</strong
+          >]
+        </h2>
 
-      <div class="alert alert-success" *ngIf="success" jhiTranslate="settings.messages.success">
-        <strong>Settings saved!</strong>
+        <div class="alert alert-success" *ngIf="success" jhiTranslate="settings.messages.success">
+          <strong>Settings saved!</strong>
+        </div>
+
+        <jhi-alert-error></jhi-alert-error>
+        <style>
+          .personal-information-link,
+          .password-link,
+          .notification-preferences-link,
+          .change-theme-link,
+          .language-preferences-link,
+          .export-data-link,
+          .log-out-link,
+          .delete-account-link {
+            text-decoration: none; /* remove underline */
+            font-size: 20px; /* set font size */
+          }
+        </style>
+
+        <img src="../../content/images/persons.png" alt="Image description" width="25" height="25" />
+        <a class="personal-information-link">Personal Information</a><br /><br />
+
+        <form name="form" role="form" (ngSubmit)="save()" [formGroup]="settingsForm" *ngIf="settingsForm.value.login" novalidate>
+          <div class="mb-3">
+            <label class="form-label" for="firstName" jhiTranslate="settings.form.firstname">First Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="firstName"
+              name="firstName"
+              placeholder="{{ 'settings.form.firstname.placeholder' | translate }}"
+              formControlName="firstName"
+              data-cy="firstname"
+            />
+
+            <div
+              *ngIf="
+                settingsForm.get('firstName')!.invalid && (settingsForm.get('firstName')!.dirty || settingsForm.get('firstName')!.touched)
+              "
+            >
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('firstName')?.errors?.required"
+                jhiTranslate="settings.messages.validate.firstname.required"
+              >
+                Your first name is required.
+              </small>
+
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('firstName')?.errors?.minlength"
+                jhiTranslate="settings.messages.validate.firstname.minlength"
+              >
+                Your first name is required to be at least 1 character
+              </small>
+
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('firstName')?.errors?.maxlength"
+                jhiTranslate="settings.messages.validate.firstname.maxlength"
+              >
+                Your first name cannot be longer than 50 characters
+              </small>
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label" for="lastName" jhiTranslate="settings.form.lastname">Last Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="lastName"
+              name="lastName"
+              placeholder="{{ 'settings.form.lastname.placeholder' | translate }}"
+              formControlName="lastName"
+              data-cy="lastname"
+            />
+
+            <div
+              *ngIf="
+                settingsForm.get('lastName')!.invalid && (settingsForm.get('lastName')!.dirty || settingsForm.get('lastName')!.touched)
+              "
+            >
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('lastName')?.errors?.required"
+                jhiTranslate="settings.messages.validate.lastname.required"
+              >
+                Your last name is required.
+              </small>
+
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('lastName')?.errors?.minlength"
+                jhiTranslate="settings.messages.validate.lastname.minlength"
+              >
+                Your last name is required to be at least 1 character
+              </small>
+
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('lastName')?.errors?.maxlength"
+                jhiTranslate="settings.messages.validate.lastname.maxlength"
+              >
+                Your last name cannot be longer than 50 characters
+              </small>
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label" for="email" jhiTranslate="global.form.email.label">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              name="email"
+              placeholder="{{ 'global.form.email.placeholder' | translate }}"
+              formControlName="email"
+              data-cy="email"
+            />
+
+            <div *ngIf="settingsForm.get('email')!.invalid && (settingsForm.get('email')!.dirty || settingsForm.get('email')!.touched)">
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('email')?.errors?.required"
+                jhiTranslate="global.messages.validate.email.required"
+              >
+                Your email is required.
+              </small>
+
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('email')?.errors?.email"
+                jhiTranslate="global.messages.validate.email.invalid"
+              >
+                Your email is invalid.
+              </small>
+
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('email')?.errors?.minlength"
+                jhiTranslate="global.messages.validate.email.minlength"
+              >
+                Your email is required to be at least 5 characters.
+              </small>
+
+              <small
+                class="form-text text-danger"
+                *ngIf="settingsForm.get('email')?.errors?.maxlength"
+                jhiTranslate="global.messages.validate.email.maxlength"
+              >
+                Your email cannot be longer than 50 characters.
+              </small>
+            </div>
+          </div>
+          <button
+            type="submit"
+            [disabled]="settingsForm.invalid"
+            class="btn btn-primary"
+            jhiTranslate="settings.form.button"
+            data-cy="submit"
+          >
+            Save</button
+          ><br /><br />
+          <img src="../../content/images/security.png" alt="Image description" width="25" height="25" />
+          <a class="password-link" (click)="loadChangePassword()">Change Password</a><br /><br />
+
+          <img src="../../content/images/globe.png" alt="Image description" width="25" height="25" />
+          <a class="language-preferences-link">Language Preferences</a><br />
+          <div class="mb-3" *ngIf="languages && languages.length > 0">
+            <label for="langKey" jhiTranslate="settings.form.language">Language</label>
+            <select class="form-control" id="langKey" name="langKey" formControlName="langKey" data-cy="langKey">
+              <option *ngFor="let language of languages" [value]="language">{{ language | findLanguageFromKey }}</option>
+            </select>
+          </div>
+
+          <button
+            type="submit"
+            [disabled]="settingsForm.invalid"
+            class="btn btn-primary"
+            jhiTranslate="settings.form.button"
+            data-cy="submit"
+          >
+            Save
+          </button>
+        </form>
+        <img src="../../content/images/pallete.png" alt="Image description" width="25" height="25" />
+        <a class="change-theme-link" id="toggle-darkmode">Change Theme</a><br /><br />
+
+        <img src="../../content/images/logout.png" alt="Image description" width="25" height="25" />
+        <a class="log-out-link" (click)="logout()" id="logout" data-cy="logout">LogOut </a><br /><br />
+        <img src="../../content/images/delete.png" alt="Image description" width="25" height="25" />
+        <a href="#delete account" class="delete-account-link">Delete Account</a><br /><br />
       </div>
-
-      <jhi-alert-error></jhi-alert-error>
-      <style>
-        .personal-information-link,
-        .notification-preferences-link,
-        .change-theme-link,
-        .language-preferences-link,
-        .export-data-link,
-        .log-out-link,
-        .delete-account-link {
-          text-decoration: none; /* remove underline */
-          font-size: 20px; /* set font size */
-        }
-      </style>
-
-      <img src="../../content/images/persons.png" alt="Image description" width="25" height="25" />
-      <a href="#personal-information-link" class="personal-information-link">Personal Information</a><br /><br />
-
-      <form name="form" role="form" (ngSubmit)="save()" [formGroup]="settingsForm" *ngIf="settingsForm.value.login" novalidate>
-        <div class="mb-3">
-          <label class="form-label" for="firstName" jhiTranslate="settings.form.firstname">First Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="firstName"
-            name="firstName"
-            placeholder="{{ 'settings.form.firstname.placeholder' | translate }}"
-            formControlName="firstName"
-            data-cy="firstname"
-          />
-
-          <div
-            *ngIf="
-              settingsForm.get('firstName')!.invalid && (settingsForm.get('firstName')!.dirty || settingsForm.get('firstName')!.touched)
-            "
-          >
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('firstName')?.errors?.required"
-              jhiTranslate="settings.messages.validate.firstname.required"
-            >
-              Your first name is required.
-            </small>
-
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('firstName')?.errors?.minlength"
-              jhiTranslate="settings.messages.validate.firstname.minlength"
-            >
-              Your first name is required to be at least 1 character
-            </small>
-
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('firstName')?.errors?.maxlength"
-              jhiTranslate="settings.messages.validate.firstname.maxlength"
-            >
-              Your first name cannot be longer than 50 characters
-            </small>
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label class="form-label" for="lastName" jhiTranslate="settings.form.lastname">Last Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="lastName"
-            name="lastName"
-            placeholder="{{ 'settings.form.lastname.placeholder' | translate }}"
-            formControlName="lastName"
-            data-cy="lastname"
-          />
-
-          <div
-            *ngIf="settingsForm.get('lastName')!.invalid && (settingsForm.get('lastName')!.dirty || settingsForm.get('lastName')!.touched)"
-          >
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('lastName')?.errors?.required"
-              jhiTranslate="settings.messages.validate.lastname.required"
-            >
-              Your last name is required.
-            </small>
-
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('lastName')?.errors?.minlength"
-              jhiTranslate="settings.messages.validate.lastname.minlength"
-            >
-              Your last name is required to be at least 1 character
-            </small>
-
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('lastName')?.errors?.maxlength"
-              jhiTranslate="settings.messages.validate.lastname.maxlength"
-            >
-              Your last name cannot be longer than 50 characters
-            </small>
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label class="form-label" for="email" jhiTranslate="global.form.email.label">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            name="email"
-            placeholder="{{ 'global.form.email.placeholder' | translate }}"
-            formControlName="email"
-            data-cy="email"
-          />
-
-          <div *ngIf="settingsForm.get('email')!.invalid && (settingsForm.get('email')!.dirty || settingsForm.get('email')!.touched)">
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('email')?.errors?.required"
-              jhiTranslate="global.messages.validate.email.required"
-            >
-              Your email is required.
-            </small>
-
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('email')?.errors?.email"
-              jhiTranslate="global.messages.validate.email.invalid"
-            >
-              Your email is invalid.
-            </small>
-
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('email')?.errors?.minlength"
-              jhiTranslate="global.messages.validate.email.minlength"
-            >
-              Your email is required to be at least 5 characters.
-            </small>
-
-            <small
-              class="form-text text-danger"
-              *ngIf="settingsForm.get('email')?.errors?.maxlength"
-              jhiTranslate="global.messages.validate.email.maxlength"
-            >
-              Your email cannot be longer than 50 characters.
-            </small>
-          </div>
-        </div>
-        <button
-          type="submit"
-          [disabled]="settingsForm.invalid"
-          class="btn btn-primary"
-          jhiTranslate="settings.form.button"
-          data-cy="submit"
-        >
-          Save</button
-        ><br /><br />
-        <img src="../../content/images/globe.png" alt="Image description" width="25" height="25" />
-        <a href="#language-preferences" class="language-preferences-link">Language Preferences</a><br />
-        <div class="mb-3" *ngIf="languages && languages.length > 0">
-          <label for="langKey" jhiTranslate="settings.form.language">Language</label>
-          <select class="form-control" id="langKey" name="langKey" formControlName="langKey" data-cy="langKey">
-            <option *ngFor="let language of languages" [value]="language">{{ language | findLanguageFromKey }}</option>
-          </select>
-        </div>
-
-        <button
-          type="submit"
-          [disabled]="settingsForm.invalid"
-          class="btn btn-primary"
-          jhiTranslate="settings.form.button"
-          data-cy="submit"
-        >
-          Save
-        </button>
-      </form>
-      <img src="../../content/images/bell.png" alt="Image description" width="25" height="25" />
-      <a href="#notification-preferences" class="notification-preferences-link">Notification Preferences</a><br /><br />
-      <img src="../../content/images/pallete.png" alt="Image description" width="25" height="25" />
-      <a href="#change-theme" class="change-theme-link">Change Theme</a><br /><br />
-      <img src="../../content/images/logout.png" alt="Image description" width="25" height="25" />
-      <a class="log-out-link" (click)="logout()" id="logout" data-cy="logout">LogOut </a><br /><br />
-      <img src="../../content/images/delete.png" alt="Image description" width="25" height="25" />
-      <a href="#delete account" class="delete-account-link">Delete Account</a><br /><br />
     </div>
   </div>
-</div>
+</body>
