--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -15,10 +15,8 @@
         <style>
           .personal-information-link,
           .password-link,
-          .notification-preferences-link,
           .change-theme-link,
           .language-preferences-link,
-          .export-data-link,
           .log-out-link,
           .delete-account-link {
             text-decoration: none; /* remove underline */
@@ -199,7 +197,7 @@
         <img src="../../content/images/logout.png" alt="Image description" width="25" height="25" />
         <a class="log-out-link" (click)="logout()" id="logout" data-cy="logout">LogOut </a><br /><br />
         <img src="../../content/images/delete.png" alt="Image description" width="25" height="25" />
-        <a href="#delete account" class="delete-account-link">Delete Account</a><br /><br />
+        <a class="delete-account-link">Delete Account</a><br /><br />
       </div>
     </div>
   </div>
