--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -17,6 +17,7 @@
           .password-link,
           .language-preferences-link,
           .log-out-link,
+          .change-theme-link,
           .delete-account-link {
             text-decoration: none; /* remove underline */
             font-size: 20px; /* set font size */
@@ -170,7 +171,6 @@
           ><br /><br />
           <img src="../../content/images/security.png" alt="Image description" width="25" height="25" />
           <a class="password-link" (click)="loadChangePassword()">Change Password</a><br /><br />
-
           <img src="../../content/images/globe.png" alt="Image description" width="25" height="25" />
           <a class="language-preferences-link">Language Preferences</a><br />
           <div class="mb-3" *ngIf="languages && languages.length > 0">
@@ -190,7 +190,8 @@
             Save
           </button>
         </form>
-
+        <img src="../../content/images/pallete.png" alt="Image description" width="25" height="25" />
+        <a class="change-theme-link" id="toggle-darkmode">Change Theme</a><br /><br />
         <img src="../../content/images/logout.png" alt="Image description" width="25" height="25" />
         <a class="log-out-link" (click)="logout()" id="logout" data-cy="logout">LogOut </a><br /><br />
         <img src="../../content/images/delete.png" alt="Image description" width="25" height="25" />
