--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -190,8 +190,12 @@
             Save
           </button>
         </form>
+
         <img src="../../content/images/pallete.png" alt="Image description" width="25" height="25" />
-        <a class="change-theme-link">Change Theme</a><br /><br />
+        <a class="change-theme-link" id="toggle-darkmode">Change Theme</a><br /><br />
+
+        <a class="change-theme-link" (click)="increaseFontSize()">Increase Font Size</a>
+        <a class="change-theme-link" (click)="decreaseFontSize()">Decrease Font Size</a><br /><br />
         <img src="../../content/images/logout.png" alt="Image description" width="25" height="25" />
         <a class="log-out-link" (click)="logout()" id="logout" data-cy="logout">LogOut </a><br /><br />
         <img src="../../content/images/delete.png" alt="Image description" width="25" height="25" />
