--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -192,8 +192,7 @@
         </form>
 
         <img src="../../content/images/pallete.png" alt="Image description" width="25" height="25" />
-        <a class="change-theme-link" id="toggle-darkmode">Change Theme</a><br /><br />
-
+        <a class="change-theme-link" (click)="toggleDarkMode()">Change Theme</a><br /><br />
         <a class="change-theme-link" (click)="increaseFontSize()">Increase Font Size</a>
         <a class="change-theme-link" (click)="decreaseFontSize()">Decrease Font Size</a><br /><br />
         <img src="../../content/images/logout.png" alt="Image description" width="25" height="25" />
