Settings export data

--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -193,10 +193,12 @@
 
         <img src="../../content/images/pallete.png" alt="Image description" width="25" height="25" />
         <a class="change-theme-link" (click)="toggleDarkMode()">Change Theme</a><br /><br />
+        <img src="../../content/images/income.png" alt="Image description" width="25" height="25" />
+        <a class="change-theme-link" (click)="exportToCSV()">Export Income Data</a><br /><br />
+        <img src="../../content/images/expense.png" alt="Image description" width="25" height="25" />
+        <a class="change-theme-link" (click)="exportToCSVExp()">Export Expense Data</a><br /><br />
         <img src="../../content/images/logout.png" alt="Image description" width="25" height="25" />
         <a class="log-out-link" (click)="logout()" id="logout" data-cy="logout">LogOut </a><br /><br />
-        <img src="../../content/images/delete.png" alt="Image description" width="25" height="25" />
-        <a class="delete-account-link">Delete Account</a><br /><br />
       </div>
     </div>
   </div>
