New Iteration of the Dashboard screen

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -71,7 +71,12 @@
         </div>
       </div>
 
-      <img src="../../content/images/MoneyMavenlogo.png" alt="Money Maven" width="600" height="264" />
+      <img
+        src="../../content/images/dashboard_image.jpg"
+        alt="Money Maven dashboard picture showing a bag with the dollar symbol of it and dollar coins beside it"
+        width="600"
+        height="600"
+      />
 
       <br />
       <br />
