--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -1,57 +1,232 @@
-<div>
-  <div class="d-flex justify-content-center">
-    <div class="col-lg-6 col-md-8 col-sm-10">
-      <h1 jhiTranslate="login.title" data-cy="loginTitle">Sign in</h1>
-      <div class="alert alert-danger" *ngIf="authenticationError" jhiTranslate="login.messages.error.authentication" data-cy="loginError">
-        <strong>Failed to sign in!</strong> Please check your credentials and try again.
-      </div>
-      <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
-        <div class="mb-3">
-          <label class="username-label" for="username" jhiTranslate="global.form.username.label">Username</label>
-          <input
-            type="text"
-            class="form-control"
-            name="username"
-            id="username"
-            placeholder="{{ 'global.form.username.placeholder' | translate }}"
-            formControlName="username"
-            #username
-            data-cy="username"
-          />
-        </div>
+<head>
+  <style>
+    .main-content{
+      width: 50%;
+      border-radius: 20px;
+      box-shadow: 0 5px 5px rgba(0,0,0,.4);
+      margin: 5em auto;
+      display: flex;
+    }
+    .company__info{
+      background-color: rgb(129,12,168);
+      border-top-left-radius: 20px;
+      border-bottom-left-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #fff;
+    }
+    .fa-android{
+      font-size:3em;
+    }
+    @media screen and (max-width: 640px) {
+      .main-content{width: 90%;}
+      .company__info{
+        display: none;
+      }
+      .login_form{
+        border-top-left-radius:20px;
+        border-bottom-left-radius:20px;
+      }
+    }
+    @media screen and (min-width: 642px) and (max-width:800px){
+      .main-content{width: 70%;}
+    }
+    .row > h2{
+    rgb(129,12,168);
+    }
+    .login_form{
+      background-color: #fff;
+      border-top-right-radius:20px;
+      border-bottom-right-radius:20px;
+      border-top:1px solid #ccc;
+      border-right:1px solid #ccc;
+    }
+    form{
+      padding: 0 2em;
+    }
+    .form__input{
+      width: 100%;
+      border:0px solid transparent;
+      border-radius: 0;
+      border-bottom: 1px solid #aaa;
+      padding: 1em .5em .5em;
+      padding-left: 2em;
+      outline:none;
+      margin:1.5em auto;
+      transition: all .5s ease;
+    }
+    .form__input:focus{
+      border-bottom-color: rgb(129,12,168);
+      box-shadow: 0 0 5px rgba(129,12,168,0.5);
+      border-radius: 4px;
+    }
+    .btn{
+      transition: all .5s ease;
+      width: 70%;
+      border-radius: 30px;
+      color:#rgb(129,12,168);
+      font-weight: 600;
+      background-color: #fff;
+      border: 1px solid rgb(129,12,168);
+      margin-top: 1.5em;
+      margin-bottom: 1em;
+    }
+    .btn:hover, .btn:focus{
+      background-color:rgb(129,12,168);
+      color:#fff;
+    }
+  </style>
+</head>
 
-        <div class="mb-3">
-          <label for="password" jhiTranslate="login.form.password">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            id="password"
-            placeholder="{{ 'login.form.password.placeholder' | translate }}"
-            formControlName="password"
-            data-cy="password"
-          />
-        </div>
-
-        <div class="form-check">
-          <label class="form-check-label" for="rememberMe">
-            <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" formControlName="rememberMe" />
-            <span jhiTranslate="login.form.rememberme">Remember me</span>
-          </label>
-        </div>
-
-        <button type="submit" class="btn btn-primary" jhiTranslate="login.form.button" data-cy="submit">Sign in</button>
-      </form>
-      <div class="mt-3 alert alert-warning">
-        <a class="alert-link" routerLink="/account/reset/request" jhiTranslate="login.password.forgot" data-cy="forgetYourPasswordSelector"
-          >Did you forget your password?</a
+<div class="container-fluid">
+  <div class="row main-content bg-success text-center">
+    <div style="display: flex; align-items: center; align-content: center" class="col-md-4 text-center company__info">
+      <svg width="191.58020477294923" height="25.4187565439278" viewBox="0 0 370.00000000000006 60.171917139969665" class="css-1j8o68f">
+        npm
+        <defs id="SvgjsDefs1190"></defs>
+        <g
+          id="SvgjsG1191"
+          featurekey="symbolFeature-0"
+          transform="matrix(2.005730571332322,0,0,2.005730571332322,-5.214899294182664,-10.02865285666161)"
+          fill="#ffffff"
         >
-      </div>
-
-      <div class="alert alert-warning">
-        <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>
-        <a class="alert-link" routerLink="/account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
+          <path
+            xmlns="http://www.w3.org/2000/svg"
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M16.6,16.4c-3,1.2-6.5,2.6-9.2,8.3l8.6,4.8c2-4.7,4.6-5.7,7.6-6.9  c3-1.2,6.3-2.5,8.9-7.5l-8.5-5C21.8,14.3,19.4,15.3,16.6,16.4z M23.3,19.5c0,1.4-1.6,2.5-3.5,2.5c-1.9,0-3.5-1.1-3.5-2.5  c0-1.4,1.6-2.5,3.5-2.5C21.7,17,23.3,18.1,23.3,19.5z M22.2,5l-1.7,3.3c-1.8,3.5-3.7,4.2-6.3,5.3c-3.2,1.3-7.2,2.9-10.2,9.3  l-1.4,2.9L18,35l1.6-3.7c1.7-3.9,3.6-4.7,6.5-5.8c3.1-1.2,7-2.8,9.9-8.4l1.5-2.9L22.2,5z M34.2,16.2c-2.5,4.9-5.9,6.3-8.9,7.5  c-3,1.2-5.6,2.2-7.6,6.9l-0.7,1.6L5.1,25l0.6-1.2c2.7-5.7,6.2-7.1,9.2-8.3c2.8-1.1,5.1-2.1,7.3-6.2L23,7.8l11.9,7.1L34.2,16.2z"
+          ></path>
+        </g>
+        <g
+          id="SvgjsG1192"
+          featurekey="nameFeature-0"
+          transform="matrix(1.120179198588837,0,0,1.120179198588837,86.90830622379227,-2.8148484935242664)"
+          fill="#ffffff"
+        >
+          <path
+            d="M11.6 11.440000000000001 l6.68 19.64 l0.08 0 l6.32 -19.64 l8.84 0 l0 28.56 l-5.88 0 l0 -20.24 l-0.08 0 l-7 20.24 l-4.84 0 l-7 -20.04 l-0.08 0 l0 20.04 l-5.88 0 l0 -28.56 l8.84 0 z M48.480000000000004 18.76 c3.3067 0 5.92 1.0067 7.84 3.02 s2.88 4.6468 2.88 7.9 c0 3.28 -0.98 5.9132 -2.94 7.9 s-4.5532 2.98 -7.78 2.98 c-3.28 0 -5.88 -1.0067 -7.8 -3.02 s-2.88 -4.6332 -2.88 -7.86 c0 -3.3333 0.98 -5.9868 2.94 -7.96 s4.54 -2.96 7.74 -2.96 z M43.480000000000004 29.68 c0 2.1067 0.42668 3.7333 1.28 4.88 s2.0933 1.72 3.72 1.72 c1.68 0 2.94 -0.58668 3.78 -1.76 s1.26 -2.7866 1.26 -4.84 c0 -2.1333 -0.43332 -3.7733 -1.3 -4.92 s-2.1267 -1.72 -3.78 -1.72 c-1.6 0 -2.8267 0.57332 -3.68 1.72 s-1.28 2.7867 -1.28 4.92 z M74.75999999999999 18.76 c2.64 0 4.5532 0.66676 5.74 2.0001 s1.78 3.4533 1.78 6.36 l0 12.88 l-5.68 0 l0 -11.72 c0 -1.7067 -0.27332 -2.9734 -0.82 -3.8 s-1.4867 -1.24 -2.82 -1.24 c-1.5467 0 -2.6667 0.46668 -3.36 1.4 s-1.04 2.4666 -1.04 4.6 l0 10.76 l-5.68 0 l0 -20.68 l5.4 0 l0 2.88 l0.12 0 c1.4133 -2.2933 3.5333 -3.44 6.36 -3.44 z M96.16 18.76 c1.9467 0 3.6801 0.45328 5.2 1.36 s2.7133 2.22 3.58 3.94 s1.3 3.7 1.3 5.94 c0 0.21332 -0.01332 0.56 -0.04 1.04 l-14.92 0 c0.05332 1.6533 0.48664 2.94 1.3 3.86 s2.06 1.38 3.74 1.38 c1.04 0 1.9933 -0.26 2.86 -0.78 s1.42 -1.1533 1.66 -1.9 l5 0 c-1.4667 4.64 -4.6932 6.96 -9.68 6.96 c-1.8933 -0.02668 -3.6466 -0.44 -5.26 -1.24 s-2.9 -2.0467 -3.86 -3.74 s-1.44 -3.66 -1.44 -5.9 c0 -2.1067 0.48668 -4.0268 1.46 -5.76 s2.2666 -3.0266 3.88 -3.88 s3.3533 -1.28 5.22 -1.28 z M100.52 27.439999999999998 c-0.26668 -1.5467 -0.76 -2.6667 -1.48 -3.36 s-1.7467 -1.04 -3.08 -1.04 c-1.3867 0 -2.48 0.39332 -3.28 1.18 s-1.2667 1.86 -1.4 3.22 l9.24 0 z M113.24000000000001 19.32 l4.68 14.16 l0.08 0 l4.52 -14.16 l5.88 0 l-8.64 23.28 c-0.61332 1.6267 -1.46 2.8134 -2.54 3.56 s-2.58 1.12 -4.5 1.12 c-0.82668 0 -2.0134 -0.06668 -3.56 -0.2 l0 -4.68 c1.0133 0.13332 2.0133 0.2 3 0.2 c0.8 0 1.42 -0.24668 1.86 -0.74 s0.66 -1.1133 0.66 -1.86 c0 -0.42668 -0.08 -0.85336 -0.24 -1.28 l-7.28 -19.4 l6.08 0 z M139.76 11.440000000000001 l6.68 19.64 l0.08 0 l6.32 -19.64 l8.84 0 l0 28.56 l-5.88 0 l0 -20.24 l-0.08 0 l-7 20.24 l-4.84 0 l-7 -20.04 l-0.08 0 l0 20.04 l-5.88 0 l0 -28.56 l8.84 0 z M176.12 18.76 c6.0268 0.02668 9.04 1.9866 9.04 5.88 l0 10.96 c0 2.0267 0.24 3.4934 0.72 4.4 l-5.76 0 c-0.21332 -0.64 -0.34664 -1.3067 -0.39996 -2 c-1.68 1.7067 -4 2.56 -6.96 2.56 c-2.16 0 -3.8733 -0.54668 -5.14 -1.64 s-1.9 -2.6133 -1.9 -4.56 c0 -1.8933 0.6 -3.36 1.8 -4.4 c1.2267 -1.0933 3.4534 -1.7866 6.68 -2.08 c2.2933 -0.24 3.7466 -0.54 4.36 -0.9 s0.92 -0.91332 0.92 -1.66 c0 -0.93332 -0.28 -1.6266 -0.84 -2.08 s-1.4933 -0.68 -2.8 -0.68 c-1.2 0 -2.1067 0.24668 -2.72 0.74 s-0.97332 1.2866 -1.08 2.38 l-5.68 0 c0.13332 -2.2667 1.0666 -3.9867 2.8 -5.16 s4.0532 -1.76 6.96 -1.76 z M171.4 34.12 c0 1.76 1.16 2.64 3.48 2.64 c3.04 -0.02668 4.5732 -1.5867 4.6 -4.68 l0 -2.2 c-0.45332 0.45332 -1.6 0.78664 -3.44 0.99996 c-1.6 0.18668 -2.7733 0.51336 -3.52 0.98004 s-1.12 1.22 -1.12 2.26 z M193.56 19.32 l4.36 14.12 l0.08 0 l4.36 -14.12 l5.64 0 l-7 20.68 l-6.32 0 l-7.08 -20.68 l5.96 0 z M219.92000000000002 18.76 c1.9467 0 3.6801 0.45328 5.2 1.36 s2.7133 2.22 3.58 3.94 s1.3 3.7 1.3 5.94 c0 0.21332 -0.01332 0.56 -0.04 1.04 l-14.92 0 c0.05332 1.6533 0.48664 2.94 1.3 3.86 s2.06 1.38 3.74 1.38 c1.04 0 1.9933 -0.26 2.86 -0.78 s1.42 -1.1533 1.66 -1.9 l5 0 c-1.4667 4.64 -4.6932 6.96 -9.68 6.96 c-1.8933 -0.02668 -3.6466 -0.44 -5.26 -1.24 s-2.9 -2.0467 -3.86 -3.74 s-1.44 -3.66 -1.44 -5.9 c0 -2.1067 0.48668 -4.0268 1.46 -5.76 s2.2666 -3.0266 3.88 -3.88 s3.3533 -1.28 5.22 -1.28 z M224.28000000000003 27.439999999999998 c-0.26668 -1.5467 -0.76 -2.6667 -1.48 -3.36 s-1.7467 -1.04 -3.08 -1.04 c-1.3867 0 -2.48 0.39332 -3.28 1.18 s-1.2667 1.86 -1.4 3.22 l9.24 0 z M245.20000000000002 18.76 c2.64 0 4.5532 0.66676 5.74 2.0001 s1.78 3.4533 1.78 6.36 l0 12.88 l-5.68 0 l0 -11.72 c0 -1.7067 -0.27332 -2.9734 -0.82 -3.8 s-1.4867 -1.24 -2.82 -1.24 c-1.5467 0 -2.6667 0.46668 -3.36 1.4 s-1.04 2.4666 -1.04 4.6 l0 10.76 l-5.68 0 l0 -20.68 l5.4 0 l0 2.88 l0.12 0 c1.4133 -2.2933 3.5333 -3.44 6.36 -3.44 z"
+          ></path>
+        </g>
+      </svg>
+      <b style="padding-left: 25px; font-size: small"><i>your money Simplified</i></b>
+    </div>
+    <div class="col-md-8 col-xs-12 col-sm-12 login_form">
+      <div class="container-fluid">
+        <div class="row">
+          <h2>Log In</h2>
+        </div>
+        <div class="row">
+          <div
+            class="alert alert-danger"
+            *ngIf="authenticationError"
+            jhiTranslate="login.messages.error.authentication"
+            data-cy="loginError"
+          >
+            <strong>Failed to sign in!</strong> Please check your credentials and try again.
+          </div>
+          <form class="form-group" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
+            <div class="row">
+              <input
+                #username
+                data-cy="username"
+                formControlName="username"
+                placeholder="{{ 'global.form.username.placeholder' | translate }}"
+                type="text"
+                name="username"
+                id="username"
+                class="form__input"
+              />
+            </div>
+            <div class="row">
+              <!-- <span class="fa fa-lock"></span> -->
+              <input
+                data-cy="password"
+                formControlName="password"
+                type="password"
+                name="password"
+                id="password"
+                class="form__input"
+                placeholder="Password"
+              />
+            </div>
+            <div style="display: flex; flex-direction: row; align-items: center; justify-content: center">
+              <input formControlName="rememberMe" type="checkbox" name="remember_me" id="remember_me" class="" />
+              <label for="remember_me">Remember Me!</label>
+            </div>
+            <div style="display: flex; flex-direction: row; align-items: center; justify-content: center">
+              <input data-cy="submit" type="submit" value="Submit" class="btn" />
+            </div>
+          </form>
+        </div>
+        <div class="row">
+          <p>Did you forgot your password? <a routerLink="/account/reset/request" data-cy="forgetYourPasswordSelector">Reset Here</a></p>
+        </div>
+        <div class="row">
+          <p>Don't have an account? <a routerLink="/account/register">Register Here</a></p>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+<!--<div>-->
+<!--&lt;!&ndash;  <h1>&ndash;&gt;-->
+<!--&lt;!&ndash;    rf&ndash;&gt;-->
+<!--&lt;!&ndash;  </h1>&ndash;&gt;-->
+<!--  <div class="d-flex justify-content-center">-->
+<!--    <div class="col-lg-6 col-md-8 col-sm-10">-->
+<!--      <h1 jhiTranslate="login.title" data-cy="loginTitle">Sign in</h1>-->
+<!--      <div class="alert alert-danger" *ngIf="authenticationError" jhiTranslate="login.messages.error.authentication" data-cy="loginError">-->
+<!--        <strong>Failed to sign in!</strong> Please check your credentials and try again.-->
+<!--      </div>-->
+<!--      <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">-->
+<!--        <div class="mb-3">-->
+<!--          <label class="username-label" for="username" jhiTranslate="global.form.username.label">Username</label>-->
+<!--          <input-->
+<!--            type="text"-->
+<!--            class="form-control"-->
+<!--            name="username"-->
+<!--            id="username"-->
+<!--            placeholder="{{ 'global.form.username.placeholder' | translate }}"-->
+<!--            formControlName="username"-->
+<!--            #username-->
+<!--            data-cy="username"-->
+<!--          />-->
+<!--        </div>-->
+
+<!--        <div class="mb-3">-->
+<!--          <label for="password" jhiTranslate="login.form.password">Password</label>-->
+<!--          <input-->
+<!--            type="password"-->
+<!--            class="form-control"-->
+<!--            name="password"-->
+<!--            id="password"-->
+<!--            placeholder="{{ 'login.form.password.placeholder' | translate }}"-->
+<!--            formControlName="password"-->
+<!--            data-cy="password"-->
+<!--          />-->
+<!--        </div>-->
+
+<!--        <div class="form-check">-->
+<!--          <label class="form-check-label" for="rememberMe">-->
+<!--            <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" formControlName="rememberMe" />-->
+<!--            <span jhiTranslate="login.form.rememberme">Remember me</span>-->
+<!--          </label>-->
+<!--        </div>-->
+
+<!--        <button type="submit" class="btn btn-primary" jhiTranslate="login.form.button" data-cy="submit">Sign in</button>-->
+<!--      </form>-->
+<!--      <div class="mt-3 alert alert-warning">-->
+<!--        <a class="alert-link" routerLink="/account/reset/request" jhiTranslate="login.password.forgot" data-cy="forgetYourPasswordSelector"-->
+<!--          >Did you forget your password?</a-->
+<!--        >-->
+<!--      </div>-->
+
+<!--      <div class="alert alert-warning">-->
+<!--        <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>-->
+<!--        <a class="alert-link" routerLink="/account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
