updated dashboard and analytics screens

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -42,7 +42,7 @@
   <div class="col-md-8" [ngSwitch]="account != null">
     <div id="content" *ngSwitchCase="true">
       <div id="titleBar">
-        <h5 class="text-end">Date:{{ today | date: 'dd/MM/yyyy' }}</h5>
+        <h5 class="text-end">Date: {{ today | date: 'dd/MM/yyyy' }}</h5>
         <br />
         <h1>Dashboard</h1>
         <h2>Monthly Financial Summary</h2>
@@ -83,8 +83,8 @@
       <h6>How Money Maven works:</h6>
 
       <h6>
-        Our easy-to-use web app lets you record and track your finances all in one place. By monitoring your income, spending, and budget,
-        you can get a complete picture of your financial health and find ways to improve it.
+        Our easy-to-use application lets you record and track your finances all in one place. By monitoring your income, spending, and
+        budget, you can get a complete picture of your financial health and find ways to improve it!
       </h6>
     </div>
   </div>
