--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,13 +1,18 @@
 <!--<jhi-page-ribbon></jhi-page-ribbon>-->
+<!--<div *ngIf="isNotLandingPage() && isNotLoginPage()">-->
 
-<div>
+<div *ngIf="account != null">
   <router-outlet name="navbar"></router-outlet>
 </div>
 
 <div class="container-fluid">
-  <div class="card jh-card">
+  <div *ngIf="account == null" class="card jh-card" style="padding: 0; margin: 0; height: 100%; width: 100%">
     <router-outlet></router-outlet>
   </div>
-
-  <jhi-footer></jhi-footer>
+  <div *ngIf="account != null" class="card jh-card" style="margin: 0; height: 100%; width: 100%">
+    <router-outlet></router-outlet>
+  </div>
+  <div *ngIf="isNotLandingPage()">
+    <jhi-footer></jhi-footer>
+  </div>
 </div>
