--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -6,6 +6,15 @@
 Bootstrap tweaks
 ===============================================================*/
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  height: 100%;
+  width: 100%;
+}
 body,
 h1,
 h2,
