--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -4,7 +4,116 @@
     <meta charset="UTF-8" />
     <title>Title</title>
   </head>
-  <body></body>
+  <style>
+    html {
+      height: 100%;
+      width: 100%;
+    }
+
+    .btn:hover {
+      color: rgb(129, 12, 168);
+      background: #ffffff;
+      border: 2px solid rgb(129, 12, 168);
+    }
+
+    .alert-link {
+      color: white;
+    }
+
+    .alert-link:hover {
+      color: rgb(129, 12, 168);
+    }
+
+    body {
+      padding: 0;
+      margin: 0;
+      background-color: #ffffff;
+    }
+
+    .wrapper {
+      width: 100%;
+    }
+
+    .container {
+      width: 1200px;
+      height: 680px; /*change height of the div*/
+      text-align: center;
+      color: #ffffff;
+    }
+    .herobg {
+      position: relative;
+      overflow: hidden;
+      background: rgb(129, 12, 168); /*change color of the div*/
+    }
+
+    .logo-img {
+      height: 500px;
+      width: 400px;
+      background: url('../../../content/images/logo_with_name_and_tagline.png') no-repeat center center;
+      background-size: contain;
+    }
+
+    .wave {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      /*background: url(https://front-end-noobs.com/jecko/img/wave-mid.svg);*/
+      background: url(https://i.postimg.cc/XqYkMxZ1/3.png);
+      background-size: 1000px 100px;
+    }
+    /*Change speed of animation*/
+    .wave.wave1 {
+      animation: animate 30s linear infinite;
+      z-index: 1000;
+      opacity: 1;
+      animation-delay: 0s;
+      bottom: 0;
+    }
+
+    .wave.wave2 {
+      animation: animate2 35s linear infinite;
+      z-index: 999;
+      opacity: 0.5;
+      animation-delay: -5s;
+      bottom: 10px;
+    }
+
+    .wave.wave3 {
+      animation: animate 30s cubic-bezier(0.17, 0.67, 0.83, 0.67) infinite;
+      z-index: 998;
+      opacity: 0.2;
+      animation-delay: -2s;
+      bottom: 15px;
+    }
+
+    .wave.wave4 {
+      animation: animate2 35s cubic-bezier(0.17, 0.67, 0.83, 0.67) infinite;
+      z-index: 997;
+      opacity: 0.7;
+      animation-delay: -5s;
+      bottom: 20px;
+    }
+
+    @keyframes animate {
+      0% {
+        background-position-x: 0;
+      }
+      100% {
+        background-position-x: 1000px;
+      }
+    }
+
+    @keyframes animate2 {
+      0% {
+        background-position-x: 0;
+      }
+      100% {
+        background-position-x: -1000px;
+      }
+    }
+  </style>
 </html>
 
 <div class="row">
@@ -88,24 +197,78 @@
       </h6>
     </div>
   </div>
+</div>
 
-  <div class="col-md-6" [ngSwitch]="account != null">
-    <div *ngSwitchCase="false">
-      <h1 class="display-4"><span jhiTranslate="home.title">Welcome to </span> MoneyMaven!</h1>
-      <br />
-      <h1>Spend Less.</h1>
-      <h1>Save More.</h1>
+<div class="col-md-6" [ngSwitch]="account != null" style="width: 100%; height: 780px; margin: 0">
+  <div class="wrapper herobg" *ngSwitchCase="false">
+    <div class="wave wave1"></div>
+    <div class="wave wave2"></div>
 
-      <p>Log in or create your account now to grow your savings!</p>
-    </div>
-
-    <div class="alert alert-warning" *ngSwitchCase="false">
-      <a class="alert-link" (click)="login()">Log in</a>
-    </div>
-
-    <div class="alert alert-warning" *ngSwitchCase="false">
-      <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;
-      <a class="alert-link" routerLink="account/register">Sign up - it's free</a>
+    <div class="wave wave3"></div>
+    <div class="wave wave4"></div>
+    <div class="container">
+      <!--your content here-->
+      <div
+        style="
+          position: absolute;
+          margin-top: 0;
+          margin-left: 24%;
+          display: flex;
+          flex-direction: column;
+          align-content: center;
+          align-items: center;
+        "
+      >
+        <span class="logo-img"></span>
+      </div>
+      <div
+        class="btn"
+        style="
+          border: 2px solid white;
+          border-radius: 20px;
+          position: absolute;
+          margin-top: 380px;
+          margin-left: 30%;
+          display: flex;
+          flex-direction: column;
+          align-content: center;
+          align-items: center;
+        "
+      >
+        <a
+          class="alert-link"
+          (click)="login()"
+          style="
+            letter-spacing: 1px;
+            height: 100%;
+            width: 100%;
+            font-family: 'Lato', sans-serif;
+            padding: 5px;
+            border-color: #ffffff;
+            border-radius: 20px;
+            text-decoration: none;
+          "
+          >Access MoneyMaven >
+        </a>
+      </div>
     </div>
   </div>
+
+  <!--  <div *ngSwitchCase="false">-->
+  <!--    <h1 class="display-4"><span jhiTranslate="home.title">Welcome to </span> MoneyMaven!</h1>-->
+  <!--    <br />-->
+  <!--    <h1>Spend Less.</h1>-->
+  <!--    <h1>Save More.</h1>-->
+
+  <!--    <p>Log in or create your account now to grow your savings!</p>-->
+  <!--  </div>-->
+
+  <!--  <div class="alert alert-warning" *ngSwitchCase="false">-->
+  <!--    <a class="alert-link" (click)="login()">Log in</a>-->
+  <!--  </div>-->
+
+  <!--  <div class="alert alert-warning" *ngSwitchCase="false">-->
+  <!--    <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;-->
+  <!--    <a class="alert-link" routerLink="account/register">Sign up - it's free</a>-->
+  <!--  </div>-->
 </div>
