editing landing page

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -47,8 +47,9 @@
     }
 
     .logo-img {
+      margin-left: 0;
       height: 500px;
-      width: 400px;
+      width: 440px;
       background: url('../../../content/images/logo_with_name_and_tagline.png') no-repeat center center;
       background-size: contain;
     }
@@ -211,8 +212,8 @@
       <div
         style="
           position: absolute;
-          margin-top: 0;
-          margin-left: 24%;
+          margin-top: -60px;
+          margin-left: 22%;
           display: flex;
           flex-direction: column;
           align-content: center;
@@ -221,14 +222,31 @@
       >
         <span class="logo-img"></span>
       </div>
+
+      <p
+        style="
+          mso-hansi-font-family: cursive;
+          font-size: 18px;
+          line-height: 1.5;
+          letter-spacing: 0.5px;
+          font-weight: 100;
+          position: absolute;
+          margin-top: 370px;
+          margin-left: 2%;
+        "
+      >
+        MoneyMaven is a digital tool that allows individuals or businesses to manage their finances by keeping track of their expenses and
+        income in <br />
+        one central location.
+      </p>
       <div
         class="btn"
         style="
           border: 2px solid white;
-          border-radius: 20px;
+          border-radius: 50px;
           position: absolute;
-          margin-top: 380px;
-          margin-left: 30%;
+          margin-top: 450px;
+          margin-left: 30.5%;
           display: flex;
           flex-direction: column;
           align-content: center;
@@ -245,7 +263,7 @@
             font-family: 'Lato', sans-serif;
             padding: 5px;
             border-color: #ffffff;
-            border-radius: 20px;
+            border-radius: 50px;
             text-decoration: none;
           "
           >Access MoneyMaven >
