--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -43,14 +43,16 @@
     .herobg {
       position: relative;
       overflow: hidden;
-      background: rgb(129, 12, 168); /*change color of the div*/
+      background-image: linear-gradient(to top, #810ca7 30%, #27273c 80%);
+      /*background: rgb(129, 12, 168); !*change color of the div*!*/
     }
+    /*#810CA7*/
 
     .logo-img {
       margin-left: 0;
       height: 500px;
       width: 440px;
-      background: url('../../../content/images/logo_with_name_and_tagline.png') no-repeat center center;
+      background: url('../../../content/images/logo_with_name_and_tagline-removebg-preview.png') no-repeat center center;
       background-size: contain;
     }
 
@@ -212,7 +214,7 @@
       <div
         style="
           position: absolute;
-          margin-top: -60px;
+          margin-top: -85px;
           margin-left: 22%;
           display: flex;
           flex-direction: column;
