--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -32,10 +32,11 @@ Navbar
 Logo styles
 ========================================================================== */
 .logo-img {
+  margin-left: 10%;
   height: 100px;
-  width: 100px;
+  width: 250px;
   display: inline-block;
   vertical-align: middle;
-  background: url('../../../content/images/MoneyMavenlogo.png') no-repeat center center;
+  background: url('../../../content/images/lgog_with_name-removebg-preview.png') no-repeat center center;
   background-size: contain;
 }
